--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "stock_analysis_using_ml"}]
 python = "^3.10"
 pandas = "^1.5.1"
 nsepy = "^0.8"
+pre-commit = "^2.20.0"
 
 
 [build-system]
