--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ python = "^3.10"
 pandas = "^1.5.1"
 nsepy = "^0.8"
 pre-commit = "^2.20.0"
+black = "^22.10.0"
+flake8 = "^5.0.4"
+isort = "^5.10.1"
+interrogate = "^1.5.0"
 
 
 [build-system]
